Fixed rename & flag item layout issue on mobile (caused by comments menu button)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -96,12 +96,13 @@
         .name-info, .flag-form {
             max-width: 430px;
             width: 100%;
-            padding: 0 20px;
+            padding: 0 40px;
         }
 
         .rename-form {
             max-width: 746px;
             width: 100%;
+            padding: 0 40px;
         }
 
         form {
